updated the notebook

--- a/index.ipynb
+++ b/index.ipynb
@@ -73,6 +73,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c277ac40-ca92-49d5-bc15-28466258a68d",
+   "metadata": {},
+   "source": [
+    "### For the tableau visualization [click here]((https://public.tableau.com/app/profile/wawira.muriithi/viz/Independentproject2learn_wb_2025-02-07))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9e9439a3-96b6-41af-83f6-e76502bfb733",
    "metadata": {},
    "source": [
